fixed auto display about page, still don't know how to center image/name, added hardcoded current/past projects

--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -43,9 +43,10 @@ ul.tab li a:focus, .active {background-color: lightblue;}
 }
 
 .user {
-  vertical-align: top;
+  vertical-align: baseline;
   display: inline-block;;
   text-align: center;
+
 }
 
 .user img {
