fixed centering profilepic/name, added jason data(still needs varible that limits the projects to those that the user has joined)

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -23,7 +23,7 @@
 
   <!-- User's profile picture/name -->  
   <div class= "user">
-    <img src="/images/cat_profile_picture.jpg">
+    <img src="/images/cat_profile_picture.jpg" class = "center-block">
     <h1 class="username">Joe Smith</h1>    
   </div>
 
@@ -47,51 +47,44 @@
 
   </div>
 
-  <!-- user's current/past projects -->
+  <!-- ***user's current/past projects *** -->
+
+  <!-- Need some variable in data.json that show/hide projects that the user has joined. Currently shows all highlights and past projects of the data file.-->
   <div id="UserProjects" class="tabcontent">
 
-    <h4>Current Projects</h4>
+  <h4>Current Projects</h4>
+  {{#each trendingProjects}}
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-xs-7" align="right">
+        <img src="{{imageURL}}" class="img-responsive img-rounded">       
+      </div>
+      <div class="col-xs-5">
+        <h4><a href="/project/trending/{{id}}" class="projectName">{{name}}</a></h4>
+        <p class="projectShortDesc">{{shortDescription}}</p>
+      </div>
+    </div>
+    <p style="margin-bottom:40px;"/></p>
+  </div>
+  {{/each}}
 
+
+  <h4>Past Projects</h4>
+  {{#each highlightProjects}}
     <div class="container-fluid">
       <div class="row">
         <div class="col-xs-7" align="right">
-          <img src="/images/trending_refugee.jpg" class="img-responsive img-rounded">       
+          <img src="{{imageURL}}" class="img-responsive img-rounded">       
         </div>
         <div class="col-xs-5">
-          <h4><a href="/project/highlights/4" class="projectName">Tutoring Refugee Children</a></h4>
-          <p class="projectShortDesc">Helping refugee children to integrate into the community better through help with language.</p>
+          <h4><a href="/project/highlights/{{id}}" class="projectName">{{name}}</a></h4>
+          <p class="projectShortDesc">{{shortDescription}}</p>
         </div>
       </div>
       <p style="margin-bottom:40px;"/></p>
     </div>
+  {{/each}}
 
-    <h4>Past Projects</h4>
-
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-xs-7" align="right">
-          <img src="/images/highlights_japaneseGarden.jpg" class="img-responsive img-rounded">       
-        </div>
-        <div class="col-xs-5">
-          <h4><a href="/project/highlights/1" class="projectName">Zensation</a></h4>
-          <p class="projectShortDesc">Providing serenity and peace of mind in a backyard garden.</p>
-        </div>
-      </div>
-      <p style="margin-bottom:40px;"/></p>
-    </div>
-
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-xs-7" align="right">
-          <img src="/images/highlights_petWatch.jpg" class="img-responsive img-rounded">       
-        </div>
-        <div class="col-xs-5">
-          <h4><a href="/project/highlights/2" class="projectName">Lost Pet Watch</a></h4>
-          <p class="projectShortDesc">Neighbors looking for your lost pet before you even ask.</p>
-        </div>
-      </div>
-      <p style="margin-bottom:40px;"/></p>
-    </div>
 
   </div>  
 
