--- a/views/create.handlebars
+++ b/views/create.handlebars
@@ -24,6 +24,25 @@
   <h1>Create a Project</h1>
 
   <!-- *** ADD CODE HERE *** -->
+    <form id="addNewProject" role="form" method="get" action="/home">
+      <div class="form-group">
+        <label for="name">Name:</label>
+        <input type="text" class="form-control" id="name" placeholder="Name" name="name">
+      </div>
+      <div class="form-group">
+        <label for="imageURL">Image URL</label>
+        <input type="text" class="form-control" id="imageURL" placeholder="Image URL" name="imageURL">
+      </div>
+      <div class="form-group">
+        <label for="shortDescription">Summary</label>
+        <input type="text" class="form-control" id="shortDescription" placeholder="Summary" name="shortDescription">
+      </div>
+      <div class="form-group">
+        <label for="description">Description:</label>
+        <input type="text" class="form-control" id="description" placeholder="Description" name="description">
+      </div>
+      <input type="submit" id="submitBtn" class="btn btn-default" value="Add project"></input>
+    </form>
 
 
 
