--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -22,8 +22,8 @@
 	<div class="container">
 		<!-- Allow you to toggle between different content on the home screen -->
 		<ul class="tab">
-	  		<li><a href="javascript:void(0)" class="tablinks" onclick="openCity(event, 'PastProject')" id = "defaultOpen">Past Highlights</a></li>
-	  		<li><a href="javascript:void(0)" class="tablinks" onclick="openCity(event, 'Trending')">Trending Now</a></li>
+	  		<li><a class="tablinks" id="Tab_PastProject">Past Highlights</a></li>
+	  		<li><a class="tablinks" id="Tab_Trending">Trending Now</a></li>
 		</ul>
 	</div>
 
@@ -69,7 +69,7 @@
 	<script src="/js/jquery-3.1.1.js"></script>
 	<script src="/js/bootstrap.js"></script>
 	<script src="/js/comeTogether.js"></script>
-	<script> document.getElementById("defaultOpen").click();</script>
+	<script> document.getElementById("Tab_PastProject").click();</script>
 	<!-- load header and footer using scripts-->
 	<script> $(function() {$("#header").load("/header.html")} ); </script>
 	<script> $(function() {$("#footer").load("/footer.html")} ); </script>
