--- a/views/create.handlebars
+++ b/views/create.handlebars
@@ -24,18 +24,18 @@
   <h1>Create a Project</h1>
 
   <!-- *** ADD CODE HERE *** -->
-    <form id="addNewProject" role="form" method="get" action="/home">
+    <form id="addNewProject" role="form" method="get" action="/add">
       <div class="form-group">
         <label for="name">Name:</label>
         <input type="text" class="form-control" id="name" placeholder="Name" name="name">
       </div>
       <div class="form-group">
-        <label for="imageURL">Image URL</label>
-        <input type="text" class="form-control" id="imageURL" placeholder="Image URL" name="imageURL">
+        <label for="imageurl">Image URL</label>
+        <input type="text" class="form-control" id="imageurl" placeholder="Image URL" name="imageurl">
       </div>
       <div class="form-group">
-        <label for="shortDescription">Summary</label>
-        <input type="text" class="form-control" id="shortDescription" placeholder="Summary" name="shortDescription">
+        <label for="summary">Summary</label>
+        <input type="text" class="form-control" id="summary" placeholder="Summary" name="summary">
       </div>
       <div class="form-group">
         <label for="description">Description:</label>
