--- a/views/create.handlebars
+++ b/views/create.handlebars
@@ -18,15 +18,10 @@
   <!-- load header -->
   <div id="header"></div>
 
-
-
-  <!-- *** ADD CODE HERE *** -->
   <h1>Create a Project</h1>
-
-  <!-- *** ADD CODE HERE *** -->
     <form id="addNewProject" role="form" method="get" action="/add">
       <div class="form-group">
-        <label for="name">Name:</label>
+        <label for="name">Name</label>
         <input type="text" class="form-control" id="name" placeholder="Name" name="name">
       </div>
       <div class="form-group">
@@ -43,7 +38,6 @@
       </div>
       <input type="submit" id="submitBtn" class="btn btn-default" value="Add project"></input>
     </form>
-
 
 
   <!-- load footer -->
