--- a/views/create.handlebars
+++ b/views/create.handlebars
@@ -36,7 +36,10 @@
         <label for="description">Description:</label>
         <input type="text" class="form-control" id="description" placeholder="Description" name="description">
       </div>
-      <input type="submit" id="submitBtn" class="btn btn-default" value="Add project"></input>
+      <div>
+      <a input type="submit" id="submitBtn" href=/confirmation class="btn btn-default"> <p>Add project</p></input>
+      </a>
+      </div>
     </form>
 
 
