--- a/views/discover.handlebars
+++ b/views/discover.handlebars
@@ -26,20 +26,14 @@
 
       <div id="map" style="width:100%;height:500px"></div>
 
-      <h4 style="margin-top: 20px">Past Highlights</h4>
-      {{#each highlightProjects}}
-        <div>
-          <a class="thumbnail"><p>{{name}}</p></a>
-        </div>
-      {{/each}}
 
       <h4 style="margin-top: 20px">Trending Now</h4>
-      {{#each trendingProjects}}
         <div>
-          <a class="thumbnail"><p>{{name}}</p></a>
+          <a href=/project/trending/1 class="thumbnail"><p>Pothole Repair Service</p></a>
         </div>
-      {{/each}}
-
+        <div>
+          <a href=/project/trending/2 class="thumbnail"><p>Sparkling Clean Beach</p></a>
+        </div>
     </div>
 
     <!-- Load GMap -->
@@ -50,7 +44,7 @@
           center: {lat: 32.88, lng: -117.24}
         });
 
-        var myCenter = new google.maps.LatLng(32.88,-117.24);
+        var myCenter = new google.maps.LatLng(32.883624, -117.252866);
         var marker = new google.maps.Marker({position:myCenter});
         var myLatlng2 = new google.maps.LatLng(32.899696,-117.225666);
         var marker2 = new google.maps.Marker({position:myLatlng2});
@@ -58,21 +52,10 @@
         var contentString = '<div id="content">'+
           '<div id="siteNotice">'+
           '</div>'+
-          '<h1 id="firstHeading" class="firstHeading">School Playground Project</h1>'+
+          '<h1 id="firstHeading" class="firstHeading">Sparkling Clean Beach</h1>'+
           '<div id="bodyContent">'+
-          '<p><b>School Playground Project</b>, also referred to as <b>Ayers Rock</b>, is a large ' +
-          'sandstone rock formation in the southern part of the '+
-          'Northern Territory, central Australia. It lies 335&#160;km (208&#160;mi) '+
-          'south west of the nearest large town, Alice Springs; 450&#160;km '+
-          '(280&#160;mi) by road. Kata Tjuta and Uluru are the two major '+
-          'features of the Uluru - Kata Tjuta National Park. Uluru is '+
-          'sacred to the Pitjantjatjara and Yankunytjatjara, the '+
-          'Aboriginal people of the area. It has many springs, waterholes, '+
-          'rock caves and ancient paintings. Uluru is listed as a World '+
-          'Heritage Site.</p>'+
-          '<p>Attribution: Uluru, <a href="https://en.wikipedia.org/w/index.php?title=Uluru&oldid=297882194">'+
-          'https://en.wikipedia.org/w/index.php?title=Uluru</a> '+
-          '(last visited June 22, 2009).</p>'+
+          '<p><b>Sparkling Clean Beach</b>, Please join us and clean up this beach! ' +
+          '<a href=/project/trending/2 <p>Join!</p> </a> '+
           '</div>'+
           '</div>';
           var infowindow = new google.maps.InfoWindow({
@@ -85,21 +68,10 @@
         var contentString2 = '<div id="content2">'+
           '<div id="siteNotice">'+
           '</div>'+
-          '<h1 id="firstHeading" class="firstHeading">Homes for the Homeless</h1>'+
+          '<h1 id="firstHeading" class="firstHeading">Pothole Repair Service</h1>'+
           '<div id="bodyContent">'+
-          '<p><b>This community project will result in a house for a homeless family to live in. ' +
-          'sandstone rock formation in the southern part of the '+
-          'Northern Territory, central Australia. It lies 335&#160;km (208&#160;mi) '+
-          'south west of the nearest large town, Alice Springs; 450&#160;km '+
-          '(280&#160;mi) by road. Kata Tjuta and Uluru are the two major '+
-          'features of the Uluru - Kata Tjuta National Park. Uluru is '+
-          'sacred to the Pitjantjatjara and Yankunytjatjara, the '+
-          'Aboriginal people of the area. It has many springs, waterholes, '+
-          'rock caves and ancient paintings. Uluru is listed as a World '+
-          'Heritage Site.</p>'+
-          '<p>Attribution: Uluru, <a href="https://en.wikipedia.org/w/index.php?title=Uluru&oldid=297882194">'+
-          'https://en.wikipedia.org/w/index.php?title=Uluru</a> '+
-          '(last visited June 22, 2009).</p>'+
+          '<p><b>Pothole Repair Service</b>, Please join us and fix the pothole that are damaging our tires! ' +
+          '<a href=/project/trending/1 <p>Join!</p> </a> '+
           '</div>'+
           '</div>';
           var infowindow2 = new google.maps.InfoWindow({
