Fixed loading new Project.

--- a/views/create.handlebars
+++ b/views/create.handlebars
@@ -37,8 +37,7 @@
         <input type="text" class="form-control" id="description" placeholder="Description" name="description">
       </div>
       <div>
-      <a input type="submit" id="submitBtn" href=/confirmation class="btn btn-default"> <p>Add project</p></input>
-      </a>
+        <input type="submit" id="submitBtn" class="btn btn-default" value="Add project"></input>
       </div>
     </form>
 
