Updated StaticPages to use container css div class. Also added hyperlinks to Contact page.

--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -21,22 +21,23 @@
 
 
   <!-- *** ADD CODE HERE *** -->
-  <h1>Contact</h1>
-  <div class="paragraph">
-    <h4>COGS 120/CSE 170</h4>
-    <h5>Professor: Scott Klemmer</h5>
-    <h5>TA: Jeremy Blackstone</h5>
-    <h5>Winter 2017</h5>
+  <div class="container">
+    <h1>Contact</h1>
+    <div class="paragraph">
+      <h4><a href="http://ixd.ucsd.edu/home/w17/index.php">COGS 120/CSE 170</a></h4>
+      <h5>Professor: Scott Klemmer</h5>
+      <h5>TA: Jeremy Blackstone</h5>
+      <h5>Winter 2017</h5>
 
-    <div style="line-height:50%;">
-  	 <br>
+      <div style="line-height:50%;">
+    	 <br>
+      </div>
+
+      <h4>Github:<h4>
+      <h5><a href="https://github.com/DarthXibalba/come-together-platform">https://github.com/DarthXibalba/come-together-platform</a></h5>
+      <hr>
     </div>
-
-    <h4>Github:<h4>
-    <h5>https://github.com/DarthXibalba/come-together-platform</h5>
-    <hr>
   </div>
-
   <!-- *** ADD CODE HERE *** -->
 
 
