--- a/views/faq.handlebars
+++ b/views/faq.handlebars
@@ -21,7 +21,8 @@
 
 
   <!-- *** ADD CODE HERE *** -->
-  <h1>FAQ</h1>
+  <div class="container">
+    <h1>FAQ</h1>
     <div class="faq">
       {{#each qANDa}}
           <h4>{{question}}</h4>
@@ -29,6 +30,7 @@
           <hr>
       {{/each}}
     </div>
+  </div>
   <!-- *** ADD CODE HERE *** -->
 
 
