Added nbsp's and statement in Settings.

--- a/views/aboutus.handlebars
+++ b/views/aboutus.handlebars
@@ -26,6 +26,7 @@
     <div class="paragraph">
       <p>Our focus is creating an environment that cultivates community involvement and empowerment in local projects. We were amazed with the potential of crowdsourcing and how everyday people could create a product/service/mortgage that could be backed by the public and not a bank or an individual investor. We wanted to bring this idea into the world of community projects, where crowdsourcing is already the major force, but in an easier and more streamlined way that would enable more people to join and create projects.
       </p>
+      &nbsp;
     </div>
 
     <div class="video-container">
