--- a/views/faq.handlebars
+++ b/views/faq.handlebars
@@ -25,9 +25,9 @@
     <h1>FAQ</h1>
     <div class="faq">
       {{#each qANDa}}
-          <h4>{{question}}</h4>
+          <h4><b>{{question}}</b></h4>
           <p>{{answer}}</p>
-          <hr>
+          &nbsp;
       {{/each}}
     </div>
   </div>
