--- a/views/settings.handlebars
+++ b/views/settings.handlebars
@@ -21,8 +21,10 @@
 
 
   <!-- *** ADD CODE HERE *** -->
-  <h1>Settings</h1>
-
+  <div class="container">
+    <h1>Settings</h1>
+    <p><em>Settings coming soon in next release!</em></p>
+  </div>
   <!-- *** ADD CODE HERE *** -->
 
 
