Added div container to Create.

--- a/views/create.handlebars
+++ b/views/create.handlebars
@@ -18,7 +18,8 @@
   <!-- load header -->
   <div id="header"></div>
 
-  <h1>Create a Project</h1>
+  <div class="container">
+    <h1>Create a Project</h1>
     <form id="addNewProject" role="form" method="get" action="/add">
       <div class="form-group">
         <label for="name">Name</label>
@@ -40,7 +41,7 @@
         <input type="submit" id="submitBtn" class="btn btn-default" value="Add project"></input>
       </div>
     </form>
-
+  </div>
 
   <!-- load footer -->
   <div id="footer"></div>
