--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -22,8 +22,8 @@
 	<div class="container">
 		<!-- Allow you to toggle between different content on the home screen -->
 		<ul class="tab">
+			<li><a class="tablinks" id="Tab_Trending">Trending Now</a></li>
 	  		<li><a class="tablinks" id="Tab_PastProject">Past Highlights</a></li>
-	  		<li><a class="tablinks" id="Tab_Trending">Trending Now</a></li>
 		</ul>
 	</div>
 
@@ -32,13 +32,12 @@
 	{{#each highlightProjects}}
 		<div class="container-fluid">
 			<div class="row">
-				<div class="col-xs-7" align="right">
-					<img src="{{imageURL}}" class="img-responsive img-rounded">				
-				</div>
-				<div class="col-xs-5">
+				<div class="col-md-5" align="left">
+					<img src="{{imageURL}}" class="img-responsive img-rounded">	
 					<h4><a href="/project/highlights/{{id}}" class="projectName">{{name}}</a></h4>
 					<p class="projectShortDesc">{{shortDescription}}</p>
 				</div>
+				
 			</div>
 			<p style="margin-bottom:40px;"/></p>
 		</div>
@@ -49,12 +48,17 @@
 	{{#each trendingProjects}}
 	<div class="container-fluid">
 		<div class="row">
-			<div class="col-xs-7" align="right">
-				<img src="{{imageURL}}" class="img-responsive img-rounded">				
-			</div>
-			<div class="col-xs-5">
+			<div class="col-md-5" align="left">
+				<img src="{{imageURL}}" class="img-responsive img-rounded">		
 				<h4><a href="/project/trending/{{id}}" class="projectName">{{name}}</a></h4>
-				<p class="projectShortDesc">{{shortDescription}}</p>
+				<p class="projectShortDesc">{{shortDescription}}</p>		
+					<h4>Participation</h4>
+  						<div class="progress">
+  							<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40"
+  								aria-valuemin="0" aria-valuemax="100" style="width:40%">
+    							40%
+  							</div>
+						</div>	
 			</div>
 		</div>
 		<p style="margin-bottom:40px;"/></p>
@@ -69,7 +73,7 @@
 	<script src="/js/jquery-3.1.1.js"></script>
 	<script src="/js/bootstrap.js"></script>
 	<script src="/js/comeTogether.js"></script>
-	<script> document.getElementById("Tab_PastProject").click();</script>
+	<script> document.getElementById("Tab_Trending").click();</script>
 	<!-- load header and footer using scripts-->
 	<script> $(function() {$("#header").load("/header.html")} ); </script>
 	<script> $(function() {$("#footer").load("/footer.html")} ); </script>
