--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -19,52 +19,100 @@
 	<!-- load header -->
 	<div id="header"></div>
 
-	<div class="container">
-		<!-- Allow you to toggle between different content on the home screen -->
-		<ul class="tab">
-			<li><a class="tablinks" id="Tab_Trending">Trending Now</a></li>
-	  		<li><a class="tablinks" id="Tab_PastProject">Past Highlights</a></li>
-		</ul>
-	</div>
 
-	<!-- Add the sample projects here -->
-	<div id="PastProject" class="tabcontent">
-	{{#each highlightProjects}}
+	{{#if versionA}}
+		<div class="container">
+			<!-- Allow you to toggle between different content on the home screen -->
+			<ul class="tab">
+		  		<li><a class="tabA" id="Tab_PastProject">Past Highlights</a></li>
+		  		<li><a class="tabA" id="Tab_Trending">Trending Now</a></li>
+			</ul>
+		</div>
+
+		<!-- Add the sample projects here -->
+		<div id="PastProject" class="tabcontent">
+		{{#each highlightProjects}}
+			<div class="container-fluid">
+				<div class="row">
+					<div class="col-xs-7" align="right">
+						<img src="{{imageURL}}" class="img-responsive img-rounded">				
+					</div>
+					<div class="col-xs-5">
+						<h4><a href="/project/highlights/{{id}}" class="projectName">{{name}}</a></h4>
+						<p class="projectShortDesc">{{shortDescription}}</p>
+					</div>
+				</div>
+				<p style="margin-bottom:40px;"/></p>
+			</div>
+		{{/each}}
+		</div>
+
+		<div id="Trending" class="tabcontent">
+		{{#each trendingProjects}}
 		<div class="container-fluid">
 			<div class="row">
-				<div class="col-md-5" align="left">
-					<img src="{{imageURL}}" class="img-responsive img-rounded">	
-					<h4><a href="/project/highlights/{{id}}" class="projectName">{{name}}</a></h4>
+				<div class="col-xs-7" align="right">
+					<img src="{{imageURL}}" class="img-responsive img-rounded">				
+				</div>
+				<div class="col-xs-5">
+					<h4><a href="/project/trending/{{id}}" class="projectName">{{name}}</a></h4>
 					<p class="projectShortDesc">{{shortDescription}}</p>
 				</div>
-				
 			</div>
 			<p style="margin-bottom:40px;"/></p>
 		</div>
-	{{/each}}
-	</div>
-
-	<div id="Trending" class="tabcontent">
-	{{#each trendingProjects}}
-	<div class="container-fluid">
-		<div class="row">
-			<div class="col-md-5" align="left">
-				<img src="{{imageURL}}" class="img-responsive img-rounded">		
-				<h4><a href="/project/trending/{{id}}" class="projectName">{{name}}</a></h4>
-				<p class="projectShortDesc">{{shortDescription}}</p>		
-					<h4>Participation</h4>
-  						<div class="progress">
-  							<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40"
-  								aria-valuemin="0" aria-valuemax="100" style="width:40%">
-    							40%
-  							</div>
-						</div>	
-			</div>
+		{{/each}}
 		</div>
-		<p style="margin-bottom:40px;"/></p>
-	</div>
-	{{/each}}
-	</div>
+
+	<!-- Home Version B -->
+	{{else}}
+		<div class="container">
+			<!-- Allow you to toggle between different content on the home screen -->
+			<ul class="tab">
+				<li><a class="tabB tablinks" id="Tab_Trending">Trending Now</a></li>
+		  		<li><a class="tabB tablinks" id="Tab_PastProject">Past Highlights</a></li>
+			</ul>
+		</div>
+
+		<!-- Add the sample projects here -->
+		<div id="PastProject" class="tabcontent">
+		{{#each highlightProjects}}
+			<div class="container-fluid">
+				<div class="row">
+					<div class="col-md-5" align="left">
+						<img src="{{imageURL}}" class="img-responsive img-rounded">	
+						<h4><a href="/project/highlights/{{id}}" class="projectName">{{name}}</a></h4>
+						<p class="projectShortDesc">{{shortDescription}}</p>
+					</div>
+					
+				</div>
+				<p style="margin-bottom:40px;"/></p>
+			</div>
+		{{/each}}
+		</div>
+
+		<div id="Trending" class="tabcontent">
+		{{#each trendingProjects}}
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-md-5" align="left">
+					<img src="{{imageURL}}" class="img-responsive img-rounded">		
+					<h4><a href="/project/trending/{{id}}" class="projectName">{{name}}</a></h4>
+					<p class="projectShortDesc">{{shortDescription}}</p>		
+						<h4>Participation</h4>
+						<div class="progress">
+							<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40"
+								aria-valuemin="0" aria-valuemax="100" style="width:40%">
+							40%
+							</div>
+						</div>	
+				</div>
+			</div>
+			<p style="margin-bottom:40px;"/></p>
+		</div>
+		{{/each}}
+		</div>
+	{{/if}}
 
 	<!-- load footer -->
 	<div id="footer"></div>
@@ -73,7 +121,13 @@
 	<script src="/js/jquery-3.1.1.js"></script>
 	<script src="/js/bootstrap.js"></script>
 	<script src="/js/comeTogether.js"></script>
-	<script> document.getElementById("Tab_Trending").click();</script>
+
+	{{#if versionA}}
+		<script> document.getElementById("Tab_PastProject").click();</script>
+	{{else}}
+		<script> document.getElementById("Tab_Trending").click();</script>
+	{{/if}}
+
 	<!-- load header and footer using scripts-->
 	<script> $(function() {$("#header").load("/header.html")} ); </script>
 	<script> $(function() {$("#footer").load("/footer.html")} ); </script>
