--- a/views/discover.handlebars
+++ b/views/discover.handlebars
@@ -17,23 +17,19 @@
     <div id="header"></div>
 
     <div class="container">
-
+      <!-- Search Box -->
       <h2 style="margin-bottom: 30px">Discover Local Projects</h2>
-      <div id="floating-panel">
+      <div id="floating-panel" class="container">
         <input id="address" type="textbox" value="92092">
         <input id="submit" type="button" value="Find">
       </div>
+      <!-- Google Maps -->
+      <div id="map" class="container"></div>
 
-      <div id="map" style="width:100%;height:500px"></div>
-
-
+      <!-- List of Projects -->
       <h4 style="margin-top: 20px">Trending Now</h4>
-        <div>
-          <a href=/project/trending/1 class="thumbnail"><p>Pothole Repair Service</p></a>
-        </div>
-        <div>
-          <a href=/project/trending/2 class="thumbnail"><p>Sparkling Clean Beach</p></a>
-        </div>
+        <div><a href=/project/trending/1 class="thumbnail"><p>Pothole Repair Service</p></a></div>
+        <div><a href=/project/trending/2 class="thumbnail"><p>Sparkling Clean Beach</p></a></div>
     </div>
 
     <!-- Load GMap -->
