Finished adjusting GMaps format so it dynamically scales its height.

--- a/views/discover.handlebars
+++ b/views/discover.handlebars
@@ -24,7 +24,7 @@
         <input id="submit" type="button" value="Find">
       </div>
       <!-- Google Maps -->
-      <div id="map" class="container"></div>
+      <div id="map" class="iframe-container container"></div>
 
       <!-- List of Projects -->
       <h4 style="margin-top: 20px">Trending Now</h4>
