--- a/public/css/discover.css
+++ b/public/css/discover.css
@@ -4,13 +4,34 @@
 
 /* Always set the map height explicitly to define the size of the div
  * element that contains the map. */
+ /*
 #map {
-  height: 200px;
+  height: auto !important;
+  min-height: 300px;
   width: 90%;
   /*
   height: 100%;
   width: 700px;
-  max-width: 100%;*/
+  max-width: 100%;
+}*/
+
+.iframe-container{
+    position: relative;
+    width: 90%;
+    min-height: 300px;
+    padding-bottom: 56.25%; /* Ratio 16:9 ( 100%/16*9 = 56.25% ) */
+}
+.iframe-container > *{
+    display: block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin: 0;
+    padding: 0;
+    height: 90%;
+    width: 90%;
 }
 
 /* Optional: Makes the sample page fill the window. */
