--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -28,7 +28,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">Come Together</a>
+          <a class="navbar-brand"><span class="glyphicon glyphicon-home"></span> Come Together</a>
         </div>
       </div>
     </nav>
