--- a/views/discover.handlebars
+++ b/views/discover.handlebars
@@ -25,11 +25,18 @@
       </div>
       <!-- Google Maps -->
       <div id="map" class="iframe-container container"></div>
-
       <!-- List of Projects -->
-      <h4 style="margin-top: 20px">Trending Now</h4>
-        <div><a href=/project/trending/1 class="thumbnail"><p>Pothole Repair Service</p></a></div>
-        <div><a href=/project/trending/2 class="thumbnail"><p>Sparkling Clean Beach</p></a></div>
+      <div class="container">
+        <h4 style="margin-top: 20px">Trending Now</h4>
+        <ul class="list-group">
+          {{#each trendingProjects}}
+            <li class="list-group-item">
+              <a href="/project/trending/{{id}}" class="">{{name}}</a><span class="badge">Value</span>
+            </li>
+          {{/each}}
+        </ul>
+      </div>
+
     </div>
 
     <!-- load footer -->
