--- a/views/home_B.handlebars
+++ b/views/home_B.handlebars
@@ -19,11 +19,12 @@
 	<!-- load header -->
 	<div id="header"></div>
 
+	<!-- Home Version B -->
 	<div class="container">
 		<!-- Allow you to toggle between different content on the home screen -->
 		<ul class="tab">
-	  		<li><a class="tabA tablinks" id="Tab_PastProject">Past Highlights</a></li>
-	  		<li><a class="tabA tablinks" id="Tab_Trending">Trending Now</a></li>
+			<li><a class="tabB tablinks" id="Tab_Trending">Trending Now</a></li>
+	  		<li><a class="tabB tablinks" id="Tab_PastProject">Past Highlights</a></li>
 		</ul>
 	</div>
 
@@ -31,13 +32,12 @@
 	<div id="PastProject" class="tabcontent">
 	{{#each highlightProjects}}
 		<div class="row">
-			<div class="col-xs-7" align="right">
+			<div class="col-md-5" align="left">
 				<img src="{{imageURL}}" class="img-responsive img-rounded">	
-			</div>
-			<div class="col-xs-5">
 				<h4><a href="/project/highlights/{{id}}" class="projectName">{{name}}</a></h4>
 				<p class="projectShortDesc">{{shortDescription}}</p>
 			</div>
+			
 		</div>
 		<p style="margin-bottom:40px;"/></p>
 	{{/each}}
@@ -46,12 +46,17 @@
 	<div id="Trending" class="tabcontent">
 	{{#each trendingProjects}}
 		<div class="row">
-			<div class="col-xs-7" align="right">
-				<img src="{{imageURL}}" class="img-responsive img-rounded">				
-			</div>
-			<div class="col-xs-5">
+			<div class="col-md-5" align="left">
+				<img src="{{imageURL}}" class="img-responsive img-rounded">		
 				<h4><a href="/project/trending/{{id}}" class="projectName">{{name}}</a></h4>
-				<p class="projectShortDesc">{{shortDescription}}</p>
+				<p class="projectShortDesc">{{shortDescription}}</p>		
+					<h4>Participation</h4>
+					<div class="progress">
+						<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40"
+							aria-valuemin="0" aria-valuemax="100" style="width:40%">
+						40%
+						</div>
+					</div>	
 			</div>
 		</div>
 		<p style="margin-bottom:40px;"/></p>
