--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -49,7 +49,7 @@
 			<div class="col-xs-7" align="right">
 				<img src="{{imageURL}}" class="img-responsive img-rounded">				
 			</div>
-			<div class="col-xs-5">
+			<div class="col-xs-5" onclick="ga('send', 'event', 'project', 'click');">
 				<h4><a href="/project/trending/{{id}}" class="projectName">{{name}}</a></h4>
 				<p class="projectShortDesc">{{shortDescription}}</p>
 			</div>
@@ -75,5 +75,15 @@
 	<!-- load header and footer using scripts-->
 	<script> $(function() {$("#header").load("/header.html")} ); </script>
 	<script> $(function() {$("#footer").load("/footer.html")} ); </script>
+	<script>
+  	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  	})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  	ga('create', 'UA-93228912-1', 'auto');
+  	ga('send', 'pageview');
+
+	</script>
 </body>
 </html>
