--- a/views/home_B.handlebars
+++ b/views/home_B.handlebars
@@ -46,7 +46,7 @@
 	<div id="Trending" class="tabcontent">
 	{{#each trendingProjects}}
 		<div class="row">
-			<div class="col-md-5" align="left">
+			<div class="col-md-5" align="left" onclick="ga('send', 'event', 'project', 'click');">
 				<img src="{{imageURL}}" class="img-responsive img-rounded">		
 				<h4><a href="/project/trending/{{id}}" class="projectName">{{name}}</a></h4>
 				<p class="projectShortDesc">{{shortDescription}}</p>		
@@ -80,5 +80,15 @@
 	<!-- load header and footer using scripts-->
 	<script> $(function() {$("#header").load("/header.html")} ); </script>
 	<script> $(function() {$("#footer").load("/footer.html")} ); </script>
+	<script>
+  	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  	})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  	ga('create', 'UA-93228912-1', 'auto');
+  	ga('send', 'pageview');
+
+	</script>
 </body>
 </html>
