Added developers. Maybe in the future add FB profile pictures to the names.

--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -23,20 +23,24 @@
   <!-- *** ADD CODE HERE *** -->
   <div class="container">
     <h1>Contact</h1>
-    <div class="paragraph">
-      <h4><a href="http://ixd.ucsd.edu/home/w17/index.php">COGS 120/CSE 170</a></h4>
-      <h5>Professor: Scott Klemmer</h5>
-      <h5>TA: Jeremy Blackstone</h5>
-      <h5>Winter 2017</h5>
+    <h4><a href="http://ixd.ucsd.edu/home/w17/index.php">COGS 120/CSE 170</a></h4>
+    <h5>Professor: Scott Klemmer</h5>
+    <h5>TA: Jeremy Blackstone</h5>
+    <h5>Winter 2017</h5>
 
-      <div style="line-height:50%;">
-    	 <br>
-      </div>
+    &nbsp;
 
-      <h4>Github:<h4>
-      <h5><a href="https://github.com/DarthXibalba/come-together-platform">https://github.com/DarthXibalba/come-together-platform</a></h5>
-      <hr>
-    </div>
+    <h3>Developers:</h3>
+    <h5>Javier Urquizu</h5>
+    <h5>Joshua Tjong</h5>
+    <h5>Justin Kim</h5>
+    <h5>Cindey Caine</h5>
+
+    &nbsp;
+
+    <h4>Github:<h4>
+    <h5><a href="https://github.com/DarthXibalba/come-together-platform">https://github.com/DarthXibalba/come-together-platform</a></h5>
+    <hr>
   </div>
   <!-- *** ADD CODE HERE *** -->
 
