Standardized text fonts across the app.

--- a/public/css/textFonts.css
+++ b/public/css/textFonts.css
@@ -40,7 +40,15 @@ h4 {
     font-family: "Trebuchet MS", sans-serif;
 }
 
+h5 {
+    font-family: "Trebuchet MS", sans-serif;
+}
+
 div p {
+    font-family: "Trebuchet MS", sans-serif;
+}
+
+p {
     font-family: "Trebuchet MS", sans-serif;
 }
 
