--- a/views/create.handlebars
+++ b/views/create.handlebars
@@ -22,23 +22,23 @@
     <h1>Create a Project</h1>
     <form id="addNewProject" role="form" method="get" action="/add">
       <div class="form-group">
-        <label for="name">Name</label>
-        <input type="text" class="form-control" id="name" placeholder="Name" name="name">
+        <label for="name" class="standardText">Name</label>
+        <input type="text" class="form-control standardText" id="name" placeholder="Name" name="name">
       </div>
       <div class="form-group">
-        <label for="imageurl">Image URL</label>
-        <input type="text" class="form-control" id="imageurl" placeholder="Image URL" name="imageurl">
+        <label for="imageurl" class="standardText">Image URL</label>
+        <input type="text" class="form-control standardText" id="imageurl" placeholder="Image URL" name="imageurl">
       </div>
       <div class="form-group">
-        <label for="summary">Summary</label>
-        <input type="text" class="form-control" id="summary" placeholder="Summary" name="summary">
+        <label for="summary" class="standardText">Summary</label>
+        <input type="text" class="form-control standardText" id="summary" placeholder="Summary" name="summary">
       </div>
       <div class="form-group">
-        <label for="description">Description:</label>
-        <input type="text" class="form-control" id="description" placeholder="Description" name="description">
+        <label for="description" class="standardText">Description:</label>
+        <input type="text" class="form-control standardText" id="description" placeholder="Description" name="description">
       </div>
       <div>
-        <input type="submit" id="submitBtn" class="btn btn-default" value="Add project"></input>
+        <input type="submit" id="submitBtn" class="btn btn-default standardText center-block" value="Add project"></input>
       </div>
     </form>
   </div>
