--- a/views/project.handlebars
+++ b/views/project.handlebars
@@ -29,11 +29,11 @@
 		{{#if showJoinBtn}}
 			<div id="btn-join">
 				<a href="/confirmation">
-	      		<input id="submit" type="button" value="Join Project!">
+	      		<input id="submit" class="standardText" type="button" value="Join Project!">
 	      		</a>
 	    	</div>
     	{{/if}}
-		<div id="btn-back"> <a href="/home">&laquo; Back</a></div>
+		<div id="btn-back"> <a href="/home" class="standardText">&laquo; Back</a></div>
 	</div>
 
 	<!-- load footer -->
