--- a/views/discover.handlebars
+++ b/views/discover.handlebars
@@ -20,8 +20,8 @@
       <!-- Search Box -->
       <h2 style="margin-bottom: 30px">Discover Local Projects</h2>
       <div id="floating-panel" class="container">
-        <input id="address" type="textbox" value="92092">
-        <input id="submit" type="button" value="Find">
+        <input id="address" class="standardText" type="textbox" value="92092">
+        <input id="submit" class="standardText" type="button" value="Find">
       </div>
       <!-- Google Maps -->
       <div id="map" class="iframe-container container"></div>
@@ -31,7 +31,7 @@
         <ul class="list-group">
           {{#each trendingProjects}}
             <li class="list-group-item">
-              <a href="/project/trending/{{id}}" class="">{{name}}</a><span class="badge">Value</span>
+              <a href="/project/trending/{{id}}" class="standardText">{{name}}</a><span class="badge">Value</span>
             </li>
           {{/each}}
         </ul>
