--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -34,8 +34,8 @@
 		<div class="row">
 			<div class="col-md-5" align="left">
 				<img src="{{imageURL}}" class="img-responsive img-rounded">	
-				<h4><a href="/project/highlights/{{id}}" class="projectName">{{name}}</a></h4>
-				<p class="projectShortDesc">{{shortDescription}}</p>
+				<h4><a href="/project/highlights/{{id}}">{{name}}</a></h4>
+				<p>{{shortDescription}}</p>
 			</div>
 		</div>
 		<p style="margin-bottom:40px;"/></p>
@@ -45,15 +45,16 @@
 	<div id="Trending" class="tabcontent">
 	{{#each trendingProjects}}
 		<div class="row">
-			<div class="col-md-5" align="left" onclick="ga('send', 'event', 'project', 'click');">
-				<img src="{{imageURL}}" class="img-responsive img-rounded">		
-				<h4><a href="/project/trending/{{id}}" class="projectName">{{name}}</a></h4>
-				<p class="projectShortDesc">{{shortDescription}}</p>		
-					<h4>Participation</h4>
-					<div class="progress">
-						<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40"
-							aria-valuemin="0" aria-valuemax="100" style="width:40%">40%</div>
-					</div>	
+			<div class="col-md-5" align="left">
+				<img src="{{imageURL}}" class="img-responsive img-rounded">
+				<h4><a href="/project/trending/{{id}}">{{name}}</a></h4>
+				<p>{{shortDescription}}</p>
+				
+				<h4>Participation</h4>
+				<div class="progress">
+					<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40"
+						aria-valuemin="0" aria-valuemax="100" style="width:40%">40%</div>
+				</div>	
 			</div>
 		</div>
 		<p style="margin-bottom:40px;"/></p>
