--- a/public/css/textFonts.css
+++ b/public/css/textFonts.css
@@ -56,6 +56,22 @@ li a {
     font-family: "Trebuchet MS", sans-serif;
 }
 
+div label {
+    font-family: "Trebuchet MS", sans-serif;
+}
+
+div input {
+    font-family: "Trebuchet MS", sans-serif;
+}
+
+div button {
+    font-family: "Trebuchet MS", sans-serif;
+}
+
+div span {
+    font-family: "Trebuchet MS", sans-serif;
+}
+
 .standardText {
     font-family: "Trebuchet MS", sans-serif;
 }
