--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -36,19 +36,21 @@
   </div>
 
   <!-- Build the rest of the login page -->
+  <div class="container">
+    <h3>Welcome to <strong>Come Together</strong>!</h3>
+    <h3>Please Log In, or <a href="/home">Sign Up</a></h3>
+  </div>
+
   <div class="container login-custom">
     <div class="row">
       <div class="main">
-        <h3>Welcome to Come Together!</h3>
-        <h3>Please Log In, or <a href="/home">Sign Up</a></h3>
-
         <form role="form">
           <div class="form-group">
             <label for="inputUsernameEmail">Username or email</label>
             <input type="text" class="form-control" id="inputUsernameEmail">
           </div>
           <div class="form-group">
-            <a class="pull-right" href="#">Forgot password?</a>
+            <a class="pull-right standardText" href="#">Forgot password ?</a>
             <label for="inputPassword">Password</label>
             <input type="password" class="form-control" id="inputPassword">
           </div>
@@ -68,11 +70,11 @@
         </div>
 
         <div class="row">
-          <a href="/home" class="btn btn-lg btn-primary btn-block">Login with Facebook</a>
+          <a href="/home" class="btn btn-lg btn-primary btn-block standardText">Login with Facebook</a>
         </div>
         <p></p>
         <div class="row">
-          <a href="/home" class="btn btn-lg btn-info btn-block">Login with Google+</a>
+          <a href="/home" class="btn btn-lg btn-info btn-block standardText">Login with Google+</a>
         </div>
       
       </div> 
