Corrected Discover Value to 40%

--- a/views/discover.handlebars
+++ b/views/discover.handlebars
@@ -31,7 +31,7 @@
         <ul class="list-group">
           {{#each trendingProjects}}
             <li class="list-group-item">
-              <a href="/project/trending/{{id}}" class="standardText">{{name}}</a><span class="badge">Value</span>
+              <a href="/project/trending/{{id}}" class="standardText">{{name}}</a><span class="badge">40%</span>
             </li>
           {{/each}}
         </ul>
