Added pictures of developers.

--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -23,18 +23,35 @@
   <!-- *** ADD CODE HERE *** -->
   <div class="container">
     <h1>Contact</h1>
+
+    <h3>Developers:</h3>
+    <div class="row">
+      <div class="col-xs-6" align="center">
+        <img src="/images/developer_javier.jpg" class="img-responsive img-rounded">
+        <h5><strong>Javier Urquizu</strong></h5>
+      </div>
+      <div class="col-xs-6" align="center">
+        <img src="/images/developer_josh.jpg" class="img-responsive img-rounded">
+        <h5><strong>Joshua Tjong</strong></h5>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-xs-6" align="center">
+        <img src="/images/developer_justin.jpg" class="img-responsive img-rounded">
+        <h5><strong>Justin Kim</strong></h5>
+      </div>
+      <div class="col-xs-6" align="center">
+        <img src="/images/developer_cindey.jpg" class="img-responsive img-rounded">
+        <h5><strong>Cindey Caine</strong></h5>
+      </div>
+    </div>
+
+    &nbsp;
+
     <h4><a href="http://ixd.ucsd.edu/home/w17/index.php">COGS 120/CSE 170</a></h4>
     <h5>Professor: Scott Klemmer</h5>
     <h5>TA: Jeremy Blackstone</h5>
     <h5>Winter 2017</h5>
-
-    &nbsp;
-
-    <h3>Developers:</h3>
-    <h5>Javier Urquizu</h5>
-    <h5>Joshua Tjong</h5>
-    <h5>Justin Kim</h5>
-    <h5>Cindey Caine</h5>
 
     &nbsp;
 
