--- a/public/css/home.css
+++ b/public/css/home.css
@@ -4,6 +4,7 @@
 
 /***** Josh's Tab Code *****/
 /* Style the list */
+/*
 ul.tab {
     list-style-type: none;
     margin: 0;
@@ -12,11 +13,9 @@ ul.tab {
     border: 1px solid #ccc;
     background-color: #f1f1f1;
 }
-
-/* Float the list items side by side */
-ul.tab li {float: left;}
-
+*/
 /* Style the links inside the list items */
+/*
 ul.tab li a {
     display: inline-block;
     color: black;
@@ -25,6 +24,45 @@ ul.tab li a {
     transition: 0.3s;
     font-size: 17px;
 }
+*/
+/***** END *****/
+/* Style the tab */
+div.tab {
+    float: left;
+    border: 1px solid #ccc;
+    background-color: #f1f1f1;
+    width: 100%;
+    height: auto;
+}
+
+/* Style the buttons inside the tab */
+div.tab button {
+    display: block;
+    background-color: inherit;
+    color: black;
+    padding: 22px 16px;
+    width: 100%;
+    border: none;
+    outline: none;
+    text-align: center;
+    cursor: pointer;
+    transition: 0.3s;
+    font-size: 17px;
+}
+
+/* Change background color of buttons on hover */
+div.tab button:hover {
+    background-color: lightblue;
+}
+
+/* Create an active/current "tab button" class */
+div.tab button.active {
+    background-color: lightblue;
+}
+
+
+
+
 
 /* Home Version A */
 .tabA {
