--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -59,10 +59,9 @@
 					<h4 class="appColor">{{name}}</h4>
 					<p style="color: black">{{shortDescription}}</p>
 					
-					<h5 style="color: black"><strong>Participation</strong></h5>
+					<h5 style="color: black"><strong>Project Progress</strong></h5>
 					<div class="progress">
-						<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40"
-							aria-valuemin="0" aria-valuemax="100" style="width:40%">40%</div>
+						<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:{{progressStatus}}">{{progressStatus}}</div>
 					</div>	
 				</div>
 			</div>
