Fixed Profile tabs.

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -27,10 +27,16 @@
   <!-- Toggles between user's about/projects -->
   <div class="container">
     <!-- Allow you to toggle between different content on the home screen -->
-    <ul class="tab">
+    <div class="tab">
+      <button class="tablinks" id="Tab_UserAbout">About</button>
+      <button class="tablinks" id="Tab_UserProjects">Projects</button>
+    </div>
+
+    <!--ul class="tab">
         <li><a class="tablinks" id="Tab_UserAbout">About</a></li>
         <li><a class="tablinks" id="Tab_UserProjects">Projects</a></li>
-    </ul>
+    </ul-->
+
   </div>
 
   <!-- user's about me page -->
